--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Cliente 2</h1>
+    <h1>Cliente desde Github</h1>
     <button onclick="getInfo1()">Info</button>
     <button onclick="getInfo2()">Info2</button>
 
